[package]
name = "founder"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.13"
bstr = "0.2.8"
clap = { version = "2.33.0", default-features = false }
crossbeam-utils = "0.6.6"
dirs = "2.0.2"
duct = "0.13.2"
once_cell = "1.2.0"
os_pipe = "0.9.1"
